add data.js tag

--- a/less/common.less
+++ b/less/common.less
@@ -16,6 +16,18 @@
 
   
 }
+.navbar .mynav .logo{
+  display: block;
+  width: 50px;
+  height: 350px;
+  // background: url(../img/logo.png);
+  background-color: pink;
+}
+.navbar .mynav .logo h1{
+  font-size: 0;
+
+}
+
 .navbar-collapse .navbar-right li a{
   font-size: 16px;
 }
